Tue May 15 20:13:24 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeviewcolumn.c: You can now set all sorts of properties
	in any order you wan, whether or not the column is added to the
	tree, or the tree is realized.  Yay!

	* gtk/gtktreeviewcolumn.c
	(gtk_tree_view_column_setup_sort_column_id_callback): handle
	sorting columns a lot saner

	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_set_reorderable):
	new function to actually set wether or not a column is
	reorderable.

	* gtk/gtktreeview.c (gtk_tree_view_unrealize): Only destroy things
	if we have 'em.

	* gtk/gtktreeviewcolumn.c (_gtk_tree_view_column_set_tree_view):
	Fix nasty bug where we were showing the button just before
	realizing it.  As a result, the parent window was
	tree_view->window instead of tree_view->priv->header_window.

	* gtk/gtktreeview.c (gtk_tree_view_set_reorderable): new property
	to let you easily reorder a list or tree.

2001-05-15  Alexander Larsson  <alla@lysator.liu.se>

	* gtk/gtkpacker.c: Apply patch from John Margaglione that converts
	from args to properties.

Tue May 15 10:11:59 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkpreview.c: Apply patch from John Margaglione converting
	from args to properties. (#51957)

	* gtk/gtkscale.c (gtk_scale_class_init): Move install property
	calls to after ->set_property call.

Mon May 14 14:56:21 2001  Owen Taylor  <otaylor@redhat.com>

	* tests/prop-editor.c: Block against redundant changes.

	* gtk/gtkpaned.c gtk/gtk[hv]paned.c: Add position, position_set
	properties.

Sun May 13 18:40:04 2001  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkpixmap.h: Remove creative formatting.

Thu May 10 19:22:28 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktogglebutton.c:  Patch from John Margaglione converting to
	property API. (#51669)

	* gtk/gtkscale.c: Patch from John Margaglione converting to
	property API. (#51891)

	* gtk/gtkaccellabel.c: Applied patch from Lee Mallabone, converting
	to property API. (#50985)
